addresses issue with CTA gap being too large due to trying to clear the gradient background of the CTA

--- a/public/rally.css
+++ b/public/rally.css
@@ -1,6 +1,7 @@
 :root {
   --content-width: 660px;
-  --onboarding-cta-height: 430px;
+  --onboarding-cta-height: 434px;
+  --onboarding-cta-offset: calc(var(--onboarding-cta-height) - 230px);
 }
 
 .shortcut-callout {
